--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,10 @@ protobuf>=3.19.5,<3.20.1
 transformers==4.26.1
 icetk
 cpm_kernels
-torch==2.0.0+cu117
+torch
 gradio
 fastapi
 pydantic
 uvicorn
+sse_starlette
+pyngrok
